@@ -1,0 +1,3 @@
+# silo-installer
+d-i/source/silo-installer/debian/silo-installer/lib/partman lib
+espresso/components/siloinstaller.py usr/lib/python2.4/site-packages/espresso/components
