@@ -2,8 +2,9 @@ espresso (0.99.51) UNRELEASED; urgency=low
 
   * GTK frontend:
     - Add a separator above the dialog buttons.
+  * Add silo-installer integration for sparc.
 
- -- Colin Watson <cjwatson@ubuntu.com>  Sun, 16 Apr 2006 09:25:23 +0100
+ -- Colin Watson <cjwatson@debian.org>  Sun, 16 Apr 2006 12:20:15 +0100
 
 espresso (0.99.50) dapper; urgency=low
 
